Assertion when setting profiling level on a secondary

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 1.9.1
    • Affects Version/s: 1.8.1
    • Component/s: None
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      I tried to enable profiling on a secondary to see if I get distributed reads and seems to fail:

      I ran:
      mongo
      MongoDB shell version: 1.8.0
      connecting to: test
      cloud1x:SECONDARY> db.setProfilingLevel(2)
      {
      "was" : 0,
      "slowms" : 100,
      "errmsg" : "exception: replSet error : logOp() but not primary?",
      "code" : 13312,
      "ok" : 0
      }

      And the log shows:

      Assertion: 13312:replSet error : logOp() but not primary?
      0x562059 0x7124a1 0x710362 0x77cf13 0x76a5a9 0x7dfd18 0x7dc5f0 0x7ddb21 0x645565 0x64addc 0x757f15 0x75a440 0x8a617e 0x8b92d0 0x7fe2026629ca 0x7fe201c1170d
      /usr/bin/mongod(_ZN5mongo11msgassertedEiPKc+0x129) [0x562059]
      /usr/bin/mongod() [0x7124a1]
      /usr/bin/mongod(_ZN5mongo5logOpEPKcS1_RKNS_7BSONObjEPS2_Pb+0x42) [0x710362]
      /usr/bin/mongod(_ZN5mongo12userCreateNSEPKcNS_7BSONObjERSsbPb+0x653) [0x77cf13]
      /usr/bin/mongod(_ZN5mongo8Database17setProfilingLevelEiRSs+0x349) [0x76a5a9]
      /usr/bin/mongod(_ZN5mongo10CmdProfile3runERKSsRNS_7BSONObjERSsRNS_14BSONObjBuilderEb+0x118) [0x7dfd18]
      /usr/bin/mongod(_ZN5mongo11execCommandEPNS_7CommandERNS_6ClientEiPKcRNS_7BSONObjERNS_14BSONObjBuilderEb+0x9a0) [0x7dc5f0]
      /usr/bin/mongod(_ZN5mongo12_runCommandsEPKcRNS_7BSONObjERNS_10BufBuilderERNS_14BSONObjBuilderEbi+0x831) [0x7ddb21]
      /usr/bin/mongod(_ZN5mongo11runCommandsEPKcRNS_7BSONObjERNS_5CurOpERNS_10BufBuilderERNS_14BSONObjBuilderEbi+0x35) [0x645565]
      /usr/bin/mongod(ZN5mongo8runQueryERNS_7MessageERNS_12QueryMessageERNS_5CurOpES1+0x31ac) [0x64addc]
      /usr/bin/mongod() [0x757f15]
      /usr/bin/mongod(_ZN5mongo16assembleResponseERNS_7MessageERNS_10DbResponseERKNS_8SockAddrE+0x5b0) [0x75a440]
      /usr/bin/mongod(_ZN5mongo10connThreadEPNS_13MessagingPortE+0x21e) [0x8a617e]
      /usr/bin/mongod(thread_proxy+0x80) [0x8b92d0]
      /lib/libpthread.so.0(+0x69ca) [0x7fe2026629ca]
      /lib/libc.so.6(clone+0x6d) [0x7fe201c1170d]

            Assignee:
            Eliot Horowitz (Inactive)
            Reporter:
            Reinaldo Giudici
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: