better secondary profiling support SERVER-2881